# chessbot

chessbot/: CMakeLists.txt  ai.cpp  ai.h  board.cpp  board.h  chessbot.cpp  chessbot.h  generator.h  getmove.cpp
userinterface/: userinterface.py
